Change VM image to 'Default' in pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ variables:
   buildConfiguration: 'Release'
   
 pool:
-  vmImage: 'windows-latest'
+   name: 'Default' 
   
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
